--- a/SparseMatrix_test/CMakeLists.txt
+++ b/SparseMatrix_test/CMakeLists.txt
@@ -7,8 +7,17 @@ project(SparseVsDenseQP)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
 find_package(Eigen3 REQUIRED)
 
-add_executable(SparseVsDenseQP sparse_matrix.cpp)
+add_executable(sparse_matrix sparse_matrix.cpp)
+target_link_libraries(sparse_matrix
+        Python3::Python
+        Python3::NumPy
+        Eigen3::Eigen)
 
-target_link_libraries(SparseVsDenseQP Eigen3::Eigen)
+add_executable(solveDARE solveDARE.cpp)
+target_link_libraries(solveDARE
+        Python3::Python
+        Python3::NumPy
+        Eigen3::Eigen)
