single shooting method

--- a/SparseMatrix_test/CMakeLists.txt
+++ b/SparseMatrix_test/CMakeLists.txt
@@ -7,23 +7,31 @@ project(SparseVsDenseQP)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+if (NOT DEFINED PLANNING_DEBUG)
+	set(PLANNING_DEBUG 1)
+endif ()
+add_definitions(-DPLANNING_DEBUG=${PLANNING_DEBUG})
+
+
 find_package(Python3 COMPONENTS Interpreter Development NumPy REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(glog REQUIRED)
 
 add_executable(sparse_matrix sparse_matrix.cpp)
 target_link_libraries(sparse_matrix
-        Python3::Python
-        Python3::NumPy
-        Eigen3::Eigen)
+		Python3::Python
+		Python3::NumPy
+		Eigen3::Eigen)
 
 add_executable(solveDARE solveDARE.cpp)
 target_link_libraries(solveDARE
-        Python3::Python
-        Python3::NumPy
-        Eigen3::Eigen)
+		Python3::Python
+		Python3::NumPy
+		Eigen3::Eigen)
 
 add_executable(shooting_method shooting_method.cpp)
 target_link_libraries(shooting_method
-        Python3::Python
-        Python3::NumPy
-        Eigen3::Eigen)
+		Python3::Python
+		Python3::NumPy
+		Eigen3::Eigen
+		glog::glog)
